package com.example.app.SpringBootSunnyShop.utils;

public final class Constants {

    public final static String URL_IMAGES_UPLOADS =
            "/images/uploads/";

}